--- a/popup.html
+++ b/popup.html
@@ -378,7 +378,7 @@
 <body class="light">
     <div class="container">
         <div class="header">
-            <img src="FITTools.png" alt="FIT Tools Logo" class="logo" id="fitLogo" style="width: 60px; height: auto; margin-bottom: 8px;">
+            <img src="EPIYUTools_Logo.png" alt="FIT Tools Logo" class="logo" id="fitLogo" style="width: 60px; height: auto; margin-bottom: 8px;">
             <h1 style="margin-top: 0; font-size: 1.5rem;">E-PIYUTools</h1>
         </div>
         
